# flight_simulator_part_A

./: CMakeLists.txt  Utils.cpp  Utils.h  details.txt  log.txt  main.cpp  makefile  t.txt  x.txt
commands/: AssignCommand.cpp  AssignCommand.h  Command.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  ExitCommand.cpp  ExitCommand.h  ExpressionCommand.cpp  ExpressionCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h
commands/vars/: DefineVarCommand.cpp  DefineVarCommand.h
conditions/: ConditionParser.cpp  ConditionParser.h  IfCommand.cpp  IfCommand.h  IfCondition.h  WhileCommand.cpp  WhileCommand.h  WhileCondition.cpp  WhileCondition.h
expression/: BinaryExpression.cpp  BinaryExpression.h  CMakeListsNonedd.txt  Div.h  Expression.h  Minus.h  Mult.cpp  Mult.h  Neg.h  Num.cpp  Num.h  Plus.cpp  Plus.h  UnaryExpression.cpp  UnaryExpression.h
expression/arithmeticExpressions/: Div.cpp  Div.h  Minus.cpp  Minus.h  Mult.cpp  Mult.h  Neg.cpp  Neg.h  Plus.cpp  Plus.h
expression/booleanExpressions/: Equal.cpp  Equal.h  GreaterThen.cpp  GreaterThen.h  LessThen.cpp  LessThen.h
factory/: CheckInputs.cpp  CheckInputs.h  CommandExpressionFactory.cpp  CommandExpressionFactory.h  ConnectFactory.cpp  ConnectFactory.h  ExpressionFactory.cpp  ExpressionFactory.h  ExpressionFactory1.cpp  ExpressionFactory1.h  FactoryInter.h  OpenServerFactory.cpp  OpenServerFactory.h  ifCommandFactory.cpp  ifCommandFactory.h  openServerFactory.cpp  openServerFactory.h  whileCommandFactory.cpp  whileCommandFactory.h
maps/: CommandFactoryMap.cpp  CommandFactoryMap.h  CommandMapClass.cpp  CommandMapClass.h  SymbolTable.cpp  SymbolTable.h  VarValue.cpp  VarValue.h
reader/: Command.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  ExpressionCommand.h  IfCondition.cpp  IfCondition.h  LexerParser.cpp  LexerParser.h  OpenServerCommand.cpp  OpenServerCommand.h  Reader.cpp  Reader.h  WhileCondition.h  t.txt  xmlReader.cpp  xmlReader.h
shuntingYard/: Operators.cpp  Operators.h  ShuntingNum.cpp  ShuntingNum.h  ShuntingYardExpression.h  StrToDoubleClass.cpp  StrToDoubleClass.h
